tests/list/out_of_range.ca.output
Error occurred:
[tests/list/out_of_range.ca:3,0] get_index()
[$174] output_placeholder() | Index out of range: 0

