tests/list/out_of_range.ca


int = make_vm(->
    l = []
    l[0]
)

int.run

assert(int.errored)
